# amphi-etl

./: .gitignore  AGENT.md  BUILDING.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASING.md  USING_GIT_AND_GITHUB.md  build.sh  docker-compose.yml  hd_build.txt  lerna.json  package.json  pyproject.toml  requirements.txt  test.py  tsconfigbase.json
.github/scripts/: update_versions.py
.github/workflows/: pypi-publish.yml
amphi-etl/: .gitignore  Dockerfile  Dockerfile.ubuntu  LICENSE  MANIFEST.in  Makefile  README.md  accounts_list.csv  lerna.json  newfile.csv  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.eslint.json  untitled.ampln
amphi-etl/.amphi/: config.toml  scheduler.sqlite
amphi-etl/amphi/: __init__.py  _version.py  main.py
amphi-etl/amphi/pipeline-components-panel/: build_log.json  package.json
amphi-etl/amphi/pipeline-components-panel/static/: lib_index_js.ef361afcd8cb5972a58e.js  node_modules_css-loader_dist_cjs_js_style_base_css-node_modules_style-loader_dist_runtime_inj-ec3a80.c8beb33eb45ed9844990.js  remoteEntry.105890be362978906de3.js  style.js  style_index_js.f6b052c6ca0af3bb6d8f.js  vendors-node_modules_ant-design_icons_es_icons_PlusOutlined_js-node_modules_ant-design_icons_-8b294e.d3043dbbd6a7747508d9.js
amphi-etl/amphi/pipeline-scheduler/: build_log.json  package.json
amphi-etl/amphi/pipeline-scheduler/static/: lib_index_js.58733a2c501e43ac1871.js  lib_index_js.664cd93c2eab5320698c.js  lib_index_js.8565f7561787e2b97e4f.js  lib_index_js.b2758df04cec650185f4.js  node_modules_dayjs_dayjs_min_js.435201cefa0336e37f8d.js  node_modules_dayjs_dayjs_min_js.8695b1ea75517ad6c633.js  remoteEntry.0676758cf163cc76d513.js  remoteEntry.60654735e10de245e2a8.js  remoteEntry.89d38ac6529fd48194bd.js  remoteEntry.a43bd912092cdc86cb1b.js  remoteEntry.a8d18f7e9abdc1c43409.js  style.js  style_index_js.108fe80d9716a43d2163.js  style_index_js.8602888d614bf802b30a.js  vendors-node_modules_ant-design_cssinjs_es_index_js.0a106cdc14574efa78bd.js  vendors-node_modules_ant-design_icons-svg_es_asn_BarsOutlined_js-node_modules_ant-design_icon-ac19c4.2f82d552f6009cfb45f4.js  vendors-node_modules_ant-design_icons-svg_es_asn_BarsOutlined_js-node_modules_ant-design_icon-ac19c4.ca45723d4e947781f597.js  vendors-node_modules_ant-design_icons_es_index_js.2705f295feda25cd0649.js  vendors-node_modules_ant-design_icons_es_index_js.cedefe61a4e9f932c5b9.js  vendors-node_modules_antd-style_es_index_js.0ded7eaba484a50e7712.js  vendors-node_modules_antd-style_es_index_js.c55850383008d77ce320.js  vendors-node_modules_babel_runtime_helpers_esm_objectWithoutProperties_js-node_modules_babel_-d8f63b.bcbc2b4d4701ca2cdf45.js
amphi-etl/config/labconfig/: page_config.json
amphi-etl/config/server-config/: pipeline_scheduler.json
amphi-etl/config/settings/: overrides.json
amphi-etl/docker/: Dockerfile
amphi-scheduler/: AGENT.md  MANIFEST.in  Makefile  README.md  _version.py  lerna.json  package.json  pyproject.toml  requirements.txt
amphi_extension/: _version.py
jupyterlab-amphi/: .env.example  .gitignore  .jupyter_ystore.db  AGENT.md  CLAUDE.md  README.md  _version.py  install.json  jupyter_server_config.json  lerna.json  output.json  package-lock.json  package.json  pyproject.toml  requirements.txt  spark_vu.py  test-trino.ipynb  tsconfigbase.json
jupyterlab-amphi/spark/: entrypoint.sh  log.txt
jupyterlab-amphi/spark/conf/: spark-defaults.conf
jupyterlab-amphi/spark/logs/: spark--org.apache.spark.deploy.history.HistoryServer-1-556f599680e2.out  spark--org.apache.spark.deploy.history.HistoryServer-1-556f599680e2.out.1  spark--org.apache.spark.deploy.master.Master-1-556f599680e2.out  spark--org.apache.spark.deploy.master.Master-1-556f599680e2.out.1  spark--org.apache.spark.deploy.master.Master-1-buitheanh.out.1  spark--org.apache.spark.deploy.worker.Worker-1-556f599680e2.out  spark--org.apache.spark.deploy.worker.Worker-1-556f599680e2.out.1  spark--org.apache.spark.sql.hive.thriftserver.HiveThriftServer2-1-556f599680e2.out  spark--org.apache.spark.sql.hive.thriftserver.HiveThriftServer2-1-556f599680e2.out.1
jupyterlab-amphi/spark/python/pyspark/: version.py
jupyterlab-amphi/spark/work/app-20240819092720-0000/0/: stderr
jupyterlab-amphi/spark/work/app-20240820045938-0002/0/: stderr
jupyterlab-amphi/spark/work/app-20240820050053-0003/0/: stderr  stdout
jupyterlab-amphi/spark/work/app-20240820050053-0003/1/: stderr  stdout
jupyterlab-amphi/spark/work/app-20240820050053-0003/2/: stderr
jupyterlab-amphi/spark/work/app-20240822143141-0000/0/: stderr
jupyterlab-amphi/spark/work/app-20240822144011-0001/0/: stderr
jupyterlab-amphi/spark/work/app-20240822144206-0002/0/: stderr
jupyterlab-amphi/spark/work/app-20240822145604-0003/0/: stderr
jupyterlab-amphi/spark/work/app-20240822171838-0004/0/: stderr
jupyterlab-amphi/spark/work/app-20240822171939-0005/0/: stderr
jupyterlab-amphi/spark/work/app-20240822172008-0006/0/: stderr
jupyterlab-amphi/spark/work/app-20240822172108-0007/0/: stderr
tests-assets/: Budget2025_Asia.ods  Budget2025_Asia.xlsx  Magnificient Invoice.pdf.docx  Order_csv_headerandfieldname_semicolon_UTF8.csv  Order_csv_noheader_UTF8.csv  Orders.parquet  Suppliers.xml  Suppliers_1.xml  Suppliers_2.xml  test_json_arrays_object_2customers.json  test_json_arrays_object_one_item.json
tests-assets/Order_csv_by_year_UTF8/: Orders2023.csv  Orders2024.csv
(+12 files in other folders)
