[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "amphi-etl"
description="Amphi is a python-based ETL"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dynamic = ["version", "authors", "keywords", "scripts", "dependencies"]

[project.urls]
Documentation = "https://docs.amphi.ai"
Homepage = "https://amphi.ai"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["amphi"]
exclude = [".github", "binder"]
include = [
    "amphi",
    "config/labconfig/*.json",
    "config/settings/*.json"
]

[tool.hatch.build.targets.wheel]
include = [
    "/amphi",
]

# share/jupyter/labextensions is present in the Python environment and is the 
# designated folder from wich jupterlab/lite takes its extensions
[tool.hatch.build.targets.wheel.shared-data]
amphi = "share/jupyter/labextensions/@amphi"
"config/labconfig" = "etc/jupyter/labconfig"
"config/settings" = "share/jupyter/lab/settings"

[tool.hatch.build.hooks.version]
path = "amphi/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "amphi/ui-component/static/style.js",
    "amphi/ui-component/package.json",
]
skip-if-exists = ["amphi/ui-component/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "amphi"
build_dir = "amphi"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm run build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
